<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Player BoRoVe</string>
    <string name="hello_world">Hello world!</string>
    <!-- ****************activity title**************************** -->
    <string name="title_activity_player">Player BoRoVe</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_library">Libreria</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="title_activity_track">Dettagli Brano</string>
    <string name="title_options">Opzioni</string>
    <string name="title_activity_playlist_add">Aggiungi Playlist</string>
    <string name="title_activity_playlist_details">Dettagli delle Playlist</string>
    <string name="title_activity_library_details">Dettagli Libreria</string>
    <string name="title_activity_playlist_single_details">Dettagli Playlist</string>
    <string name="title_activity_playlist_edit">Modifica Playlist</string>
    <!-- ****************altro**************************** -->
    <string name="library">Libreria</string>
    <string name="playlist">Playlist</string>
    <string name="settings">Impostazioni</string>
    <string name="classification">Classificazione</string>
    <string name="player">Lettore</string>
    <string name="duration">500</string>
    <string name="txtButton">Exit</string>
    <string name="artista">Artista</string>
    <string name="titolo">Titolo</string>
    <string name="voto">Voto</string>
    <string name="album">Album</string>
    <string name="genere">Genere</string>
    <string name="durata">Durata</string>
    <string name="updateList">Update</string>
    <string name="play_item_playlist">play</string>
    <string name="open_item_playlist">apri</string>
    

    <!-- *****************menu_track.xml**************** -->
    <string name="details">Dettagli </string>
    <string name="erase">Rimuovi</string>

    <!-- *****************menu_Playlist.xml**************** -->
    <string name="detailsPlay">Dettagli </string>
    <string name="PreviewPlay">Anteprima </string>
    <string name="AddTrackPlay">Modifica</string>
    <string name="erasePlay">Rimuovi</string>

    <!-- *****************settings_activity.xml**************** -->
    <string name="EraseDb">Cancella Database</string>
    <string name="SyncDb">Sincronizza Database</string>

    <!-- *****************settings_activity.xml**************** -->
    <string name="detailsPlaylist">Apri</string>
    <string name="openPlayer">Play</string>
    <string name="content"></string>

    <!-- *****************navigation drawer**************** -->
    <string name="drawer_open">Apri</string>
    <string name="drawer_close">Chiudi</string>
    <string name="description">Controlli Media</string>

    <string-array name="drawer_choice_playlist">
        <item>Aggiungi Playlist</item>
        <item>Aggiorna</item>
        <item>Dettagli</item>
        <item>Impostazioni</item>
    </string-array>
    <string-array name="drawer_choice_library">
        <item>Aggiorna Libreria</item>
        <item>Dettagli</item>
        <item>Impostazioni</item>
    </string-array>
    <string-array name="drawer_choice_single_playlist">
        <item>Modifica Playlist</item>
        <item>Dettagli</item>
        <item>Impostazioni</item>
    </string-array>

    <!-- *****************add playlist**************** -->
    <string name="label_add_playlist">Inserisci il nome della playlist</string>
    <string name="playlist_add_hint">Nuova Playlist</string>
    <string name="btn_add_playlist">Crea</string>

    <!-- *****************popup add playlist**************** -->
    <string name="playlist_popup_choice1">Elimina</string>
    <string name="playlist_popup_choice2">Dettagli</string>
    <string name="playlist_popup_choice3">Annulla</string>
    <string name="playlist_popup_choice4">Anteprima</string>
    <string name="action_settings">Settings</string>

    <!-- *****************details library******************* -->
    <string name="activity_details_n_tracks">Numero di brani</string>
    <string name="activity_details_total_memory">Memoria occupata</string>
    <string name="activity_details_total_duration">Durata totale libreria</string>
    <string name="activity_details_longest_track">Brano più lungo</string>
    <string name="activity_details_biggest_track">File più grande</string>

    <!-- *****************details playlist******************* -->
    <string name="activity_details_n_playlist">Numero di playlist</string>
    <string name="activity_details_total_duration_playlist">Durata totale di tutte le playlist</string>
    <string name="activity_details_longest_playlist">Playlist più lungo</string>
    <string name="activity_details_biggest_playlist">Playlist con più brani</string>

    <!-- *****************details single playlist******************* -->
    <string name="activity_details_n_track_in_playlist">Numero di brani</string>
    <string name="activity_details_total_duration_single_playlist">Durata totale della playlist</string>
    <string name="activity_details_longest_track_in_playlist">Brano più lungo</string>
    
    <!-- *****************edit playlist activity ******************* -->
    <string name="edit_playlist_title">Titolo della playlist</string>
	<string name="edit_playlist_add_track">Aggiungi brani alla playlist</string>
	<string name="edit_playlist_remove_track">Rimuovi brani dalla playlist</string>
	<string name="edit_playlist_add_track_btn">Aggiungi</string>
	<string name="edit_playlist_remove_track_btn">Rimuovi</string>
	<string name="edit_playlist_edit_title_btn">Fatto</string>
	
	<!-- *****************Toast Strings ******************* -->
	<string name="library_update">Aggiorna la libreria</string>
	<string name="library_list_update">Lista aggiornata</string>
	<string name="music_service_error1">Impossibile riprodurre</string>
	<string name="player_controller_error1">Seleziona un brano</string>
	<string name="player_controller_preview1">Anteprima di</string>
	<string name="playlist_add_activity_error1">Titolo duplicato!</string>
	<string name="playlist_add_activity_warning1">Database vuoto!</string>
	<string name="settings_activity1">Database creato!</string>
	<string name="settings_activity2">Prima cancella il database!</string>
	
</resources>
