<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:weightSum="1.0" >

    <TextView
        android:id="@+id/text_view_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight="0.6"
        android:maxLength="34"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6666FF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
	        android:orientation="vertical"
            android:layout_marginEnd="10dp">

        <ImageButton
            android:id="@+id/button_pl1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_playlist"
            android:src="@drawable/player_icon_small"
            android:text="@string/openPlayer"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/play_item_playlist"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
	        android:orientation="vertical"
            android:layout_marginEnd="10dp">

        <ImageButton
            android:id="@+id/button_pl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/background_button_playlist"
            android:src="@drawable/playlist_icon3_small"
            android:text="@string/detailsPlaylist"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/open_item_playlist"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>