<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_listview" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5.0"
	    android:layout_margin="10dp">
	    
		<ImageView
			android:id="@+id/albumArt"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/content"
			android:src="@drawable/icon" />
    
    </RelativeLayout>

		  

    <ScrollView 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp">
    <LinearLayout  
	     android:layout_width="match_parent"
		 android:layout_height="wrap_content" 
		 android:orientation="vertical">
		 
	    <LinearLayout  
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    
		    android:orientation="horizontal">
		    
	        <TextView
		        android:id="@+id/txtTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"
		        
		     
		        android:textColor="#FFCC99"
		        android:text="@string/titolo" />
	
	        <TextView
	            android:id="@+id/titleTrack"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_margin="4dp"
	            android:gravity="center"
	            android:layout_weight="1.0"
	            android:layout_gravity="center"
	            android:textColor="#6666FF"
	            android:textStyle="italic"
	            android:text="TextView" />
	        
	    </LinearLayout>
	
	   	<LinearLayout  
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	
		    <TextView
		        android:id="@+id/artista2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"
		        android:textColor="#FFCC99"
		        android:text="@string/artista" />
		    
		     <TextView
	            android:id="@+id/songArtist"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_margin="4dp"
	            android:gravity="center"
	            android:layout_gravity="center"
	            android:layout_weight="1.0"
	            android:textColor="#6666FF"
	            android:textStyle="italic"
	            android:text="TextView" />
	    
	    </LinearLayout>
	    
	   	<LinearLayout  
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	
		     <TextView
		        android:id="@+id/album"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"      
		        android:textColor="#FFCC99"
		        android:text="@string/album" />
		    
		     <TextView
	            android:id="@+id/albumName"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_margin="4dp"
	            android:gravity="center"
	            android:layout_weight="1.0"
	            android:layout_gravity="center"
	            android:textColor="#6666FF"
	            android:textStyle="italic"
	            android:text="TextView" /> 
		    
	    </LinearLayout>
	    
	   	<LinearLayout  
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	
		    <TextView
		        android:id="@+id/genere"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"
		        android:textColor="#FFCC99"
		        android:text="@string/genere" />
	    
	     	<TextView
	            android:id="@+id/kind"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_margin="4dp"
	            android:gravity="center"
	            android:layout_gravity="center"
	            android:layout_weight="1.0"
	            android:textColor="#6666FF"
	            android:textStyle="italic"
	            android:text="TextView" /> 
	    
	     </LinearLayout>

	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal" >

	         <TextView
	             android:id="@+id/lengthTrack"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_margin="4dp"

	             android:text="@string/duration"
	             android:textColor="#FFCC99" />
	         
	         
	         <LinearLayout
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center"
	         	 android:gravity="center"
		         android:orientation="horizontal" >

	         <ImageButton
	             android:id="@+id/star1"
	             android:layout_width="30dp"
	             android:layout_height="30dp"
	             android:layout_gravity="center" 
	             android:layout_marginRight="7dp"
	             android:background="@android:color/transparent"
	             android:scaleType="fitXY"
	             android:src="@drawable/star_silver" />
	         <ImageButton
	             android:id="@+id/star2"
	             android:layout_width="30dp"
	             android:layout_height="30dp"
	             android:layout_gravity="center"
	             android:layout_marginRight="7dp"
	             android:background="@android:color/transparent"
	             android:scaleType="fitXY"
	             android:src="@drawable/star_silver" />
	         <ImageButton
	             android:id="@+id/star3"
	             android:layout_width="30dp"
	             android:layout_height="30dp"
	             android:layout_gravity="center"
	             android:layout_marginRight="7dp"
	             android:background="@android:color/transparent"
	             android:scaleType="fitXY"
	             android:src="@drawable/star_silver" />
	         <ImageButton
	             android:id="@+id/star4"
	             android:layout_width="30dp"
	             android:layout_height="30dp"
	             android:layout_gravity="center"
	             android:layout_marginRight="7dp"
	             android:background="@android:color/transparent"
	             android:scaleType="fitXY"
	             android:src="@drawable/star_silver" />
	         <ImageButton
	             android:id="@+id/star5"
	             android:layout_width="30dp"
	             android:layout_height="30dp"
	             android:layout_gravity="center"
	             android:background="@android:color/transparent"
	             android:scaleType="fitXY"
	             android:src="@drawable/star_silver" />
	        </LinearLayout>

	     </LinearLayout>

		<LinearLayout  
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="30dp">
			    <Button
			        android:id="@+id/exitButton"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"      
			        android:text="@string/txtButton"
			        android:background="@drawable/ellipse_button" />
			    
	 	</LinearLayout>
	</LinearLayout>
	</ScrollView>


</LinearLayout>
